--- a/client/src/index.css
+++ b/client/src/index.css
@@ -49,7 +49,7 @@ footer{
 
 textarea:focus, input:focus{
   outline: none;
-  font-weight: 600;
+  font-weight: 300;
   color: var(--input-focus);
 }
 
@@ -57,14 +57,13 @@ textarea, input{
   color: var(--input-focus);
 }
 
-
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  font-family: var(--designer-font-primary); /*'Karla', sans-serif;*/
+  font-family: var(--designer-font-primary); 
   font-weight: 700;
   margin: 5px 0;
   line-height: 1.25;
@@ -170,7 +169,10 @@ nav a:hover {
 /* CARDS */
 .card {
   margin: 0 0 20px 0;
-  border: 3px solid var(--dark);
+  border-top: 1px solid var(--dark);
+  border-bottom: 3px solid var(--dark);
+  border-right: 1px solid var(--dark);
+  border-left: 1px solid var(--dark);
   border-radius: var(--border-radius);
   background-color: var(--light);
   color: var(--dark);
