--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,8 @@
   --tertiary:  rgba(255, 191, 252, 0.100);
   --quatrinary: rgb(233, 223, 223);/*rgb(240, 186, 234);*/
   --light: rgba(254, 240, 238, 0.914);
-  --dark: rgba(98, 134, 130, 0.954); /*rgb(184, 100, 152);*/ /*#689292;*/
+  --dark: rgba(98, 130, 130, 0.989); /*rgb(184, 100, 152);*/ /*#689292;*/
+  --mediuml: rgba(125, 150, 150, 0.988); 
   --error: rgba(177, 55, 126, 0.654);
   --emphasis-catchy: rgba(182, 65, 136, 0.624);
   --input-focus: rgb(115, 129, 131);
@@ -166,7 +167,7 @@ nav a:hover {
 
 .btn,
 .pill {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   text-decoration: none;
   padding: 0.5rem 1.2rem;
   margin: 5px 0;
@@ -192,7 +193,7 @@ nav a:hover {
  
 .pill:hover {
   color: var(--secondary);
-  background-color: var(--dark);
+  background-color: var(--mediuml);
 }
 
 .btn-inline {
