--- a/client/src/index.css
+++ b/client/src/index.css
@@ -274,24 +274,9 @@ nav a:hover {
   margin: 0.625rem 0 0.25rem;
 }
 
-[type='radio']:checked,
-[type='radio']:not(:checked) {
-  position: absolute;
-  left: -9999px;
-}
-[type='radio']:checked + label,
-[type='radio']:not(:checked) + label {
-  position: relative;
-  padding-left: 25px;
-  cursor: pointer;
-  line-height: 20px;
-  display: inline-block;
-  color: var(--secondary);
-  margin-right: 0.2rem;
-}
 
-[type='radio']:checked + label:before,
-[type='radio']:not(:checked) + label:before {
+input[type='checkbox']:checked + label:before, 
+input[type='checkbox']:not(:checked) + label:before {
   content: '';
   position: absolute;
   left: 0;
@@ -300,10 +285,12 @@ nav a:hover {
   height: 18px;
   border: 2px solid var(--secondary);
   border-radius: 100%;
-  background: #fff;
+  background: var(--light);
+  background-color: var(--secondary);
+  color: red;
 }
-[type='radio']:checked + label:after,
-[type='radio']:not(:checked) + label:after {
+input[type='checkbox']:checked + label:after,
+input[type='checkbox']:not(:checked) + label:after {
   content: '';
   width: 12px;
   height: 12px;
@@ -314,18 +301,21 @@ nav a:hover {
   border-radius: 100%;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
+  color: red;
 }
 
-[type='radio']:not(:checked) + label:after {
+input[type='checkbox']:not(:checked) + label:after {
+  color: red;
   opacity: 0;
   -webkit-transform: scale(0);
   transform: scale(0);
 }
 
-[type='radio']:checked + label:after {
+input[type='checkbox']:checked + label:after {
   opacity: 1;
   -webkit-transform: scale(1);
   transform: scale(1);
+  color: red;
 }
 
 /* LAYOUT */
