--- a/client/src/index.css
+++ b/client/src/index.css
@@ -78,6 +78,10 @@ h5{
   margin: 5px 0;
   line-height: 1.25;
 }
+
+h2{
+  color: var(--emphasis-catchy);
+}
  
 h4{
   font-family: var(--designer-font-primary); 
@@ -98,7 +102,7 @@ h6 {
 }
 
 h1 {
-  font-size: 2.25rem;
+  font-size: 2.35rem;
 }
 
 h2 {
