--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
   --quatrinary: rgb(233, 223, 223);/*rgb(240, 186, 234);*/
   --light: rgba(254, 240, 238, 0.914);
   --dark: rgba(98, 130, 130, 0.989); /*rgb(184, 100, 152);*/ /*#689292;*/
-  --mediuml: rgba(125, 150, 150, 0.988); 
+  --medium: rgba(125, 150, 150, 0.988); 
   --light-teal: rgba(179, 210, 200, 0.859);
   --error: rgba(177, 55, 126, 0.654);
   --pink-mature: rgba(131, 57, 100, 0.754);
@@ -62,6 +62,19 @@ main a:hover{
   color: var(--emphasis-catchy);
   text-decoration: none;
   font-weight: 500;
+}
+
+main .card a {
+  color: var(--emphasis-catchy);
+  text-shadow: 1px 1px 1px var(--light);
+  text-decoration: none;
+  font-weight: 500;
+}
+
+main .card a:hover{
+  color: var(--light-teal);
+  text-shadow: 1px 1px   var(--secondary);
+  text-decoration: none;
 }
 
 textarea:focus, input:focus{
@@ -202,7 +215,7 @@ nav a:hover {
  
 .pill:hover {
   color: var(--secondary);
-  background-color: var(--mediuml);
+  background-color: var(--medium);
 }
 
 .btn-inline {
