--- a/client/src/index.css
+++ b/client/src/index.css
@@ -77,6 +77,12 @@ main .card a:hover{
   text-decoration: none;
 }
 
+main .card .discuss span:hover{
+  color: var(--medium);
+  text-shadow: 1px 1px   var(--secondary);
+  text-decoration: overline;
+}
+
 textarea:focus, input:focus{
   outline: none;
   font-weight: 300;
