--- a/client/src/index.css
+++ b/client/src/index.css
@@ -321,16 +321,16 @@ nav a:hover {
 }
 
 .card-body {
-  padding: 1.8% 2.5% 1.5% 2.5% ;
+  padding: 1.8% 2.5% 1.3% 2.5% ;
   /* font-size: 1.3rem; */
   /* padding: 2.5%; */
   font-size: 1.3rem;
 }
 
 .card-body p {
-  padding: 0.5% 1.5% 0.5% 1.5%;
+  padding: 0.5% 1.5% 0.25% 1.5%;
   /* padding: 2.5%; */
-  font-size: 1.4rem !important;
+  font-size: 1.3rem !important;
 }
 
 .card-body span {
@@ -1498,7 +1498,7 @@ input[type="radio"] { /* change "blue" browser chrome to yellow */
     padding: 3px 4px;
     margin: 0 10px;
     transition: all 0.2s;
-  }
+  }  
   
   label{
     font-size: 0.80rem !important;
@@ -1506,6 +1506,33 @@ input[type="radio"] { /* change "blue" browser chrome to yellow */
 
   footer{
     font-size: 0.90rem !important;
+  }
+
+  main {
+    font-size: 0.95rem !important;
+  }
+
+  main a {
+    font-size: 1.0rem !important;
+  }
+
+  .card-header span, p {
+    font-size: 0.83rem !important;
+  }
+
+  .card-body p {
+    padding: 0.2% 0.25% 0.2% 0.25%;
+    font-size: 0.89rem !important;
+  }
+  
+  .card-body span {
+    padding: 0.15% 0;
+    font-size: 0.76rem !important;
+    font-family: var(--casual-technical-font);
+  }
+
+  .form-textarea{
+    font-size: 0.75rem !important;
   }
 
   .form-input{
@@ -1590,6 +1617,33 @@ input[type="radio"] { /* change "blue" browser chrome to yellow */
     font-size: 1.15rem  ;
   }
 
+  main {
+    font-size: 1.05rem ;
+  }
+
+  main a {
+    font-size: 1.15rem ;
+  }
+
+  .card-header span, p {
+    font-size: 1.05rem !important;
+  }
+
+  .card-body p {
+    padding: 0.2% 0.25% 0.2% 0.25%;
+    font-size: 0.98rem ;
+  }
+  
+  .card-body span {
+    padding: 0.5% 0 0.15% 0;
+    font-size: 0.81rem ;
+    font-family: var(--casual-technical-font);
+  }
+
+  .form-textarea{
+    font-size: 1.10rem ;
+  }
+
   .form-input{
     height: 35px  ;
     font-size: 0.95rem  ;
@@ -1606,7 +1660,7 @@ input[type="radio"] { /* change "blue" browser chrome to yellow */
   }
 
   .border-photo-small{
-    width: 24% !important;
+    width: 24% ;
     height: 23% !important;
     position: relative;     
   } 
@@ -1668,6 +1722,33 @@ input[type="radio"] { /* change "blue" browser chrome to yellow */
 
   footer{
     font-size: 1.2rem  ;
+  }
+
+  main {
+    font-size: 1.10rem ;
+  }
+
+  main a {
+    font-size: 1.15rem ;
+  }
+
+  .card-header span, p {
+    font-size: 1.05rem !important;
+  }
+
+  .card-body p {
+    padding: 0.2% 0.25% 0.2% 0.25%;
+    font-size: 0.98rem ;
+  }
+  
+  .card-body span {
+    padding: 0.5% 0 0.15% 0;
+    font-size: 0.81rem ;
+    font-family: var(--casual-technical-font);
+  }
+
+  .form-textarea{
+    font-size: 1.05rem ;
   }
 
   .form-input{
